# RoboMentor

./: .gitignore  BUILD_DEPLOYMENT.md  CHANGELOG.md  README.md  TODO.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: config.py  main.py  requirements.txt
backend/api/: __init__.py  adaptive_scheduler.py  ai_engine.py  calendar_integration.py  learning_tracker.py  trend_integrations.py  upgrade_recommendations.py
backend/core/: __init__.py
backend/core/adaptive_scheduler/: __init__.py  algorithms.py  scheduler.py
backend/core/ai_engine/: __init__.py  chat_handler.py  gpt_client.py  quiz_generator.py  recommender.py
backend/core/learning_tracker/: __init__.py  goal_tracker.py  path_generator.py  skill_analyzer.py
backend/core/upgrade_recommendations/: __init__.py  recommendations_engine.py
backend/integrations/calendar_integration/: __init__.py  google_calendar.py
backend/integrations/trend_integrations/: __init__.py  arxiv_trends.py  github_trends.py
backend/models/: __init__.py  models.py
backend/tests/: conftest.py
backend/tests/functional/: test_basic_functionality.py
backend/tests/integration/: test_api_endpoints.py
backend/tests/unit/: test_adaptive_scheduler.py  test_ai_engine.py  test_learning_tracker.py  test_upgrade_recommendations.py
docs/: api-reference.md  architecture.md  competitive-analysis.md  development.md  getting-started.md  implementation.md  index.md  launch-strategy.md  metrics.md  onboarding.md  roadmap.md
frontend/: index.html  main.css  main.js  package-lock.json  package.json  preload.js  renderer.js  webpack.config.js
frontend/public/: index.html
frontend/src/: App.js  index.js  theme.js
frontend/src/pages/: Chat.js  Dashboard.js  Settings.js  (+1 more)
scripts/: build_backend.py
