[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robomentor-app"
version = "0.1.0"
description = "An AI-powered learning platform designed specifically for robotics engineers, providing personalized learning paths, adaptive scheduling, and real-time upgrade recommendations in a local-first architecture."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "The RoboMentor Authors", email = "info@robomentor.dev"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "requests>=2.28.0",
    "python-dateutil>=2.8.0",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "arxiv>=1.4.0",
    "PyGitHub>=1.55.0",
]

[project.urls]
Homepage = "https://github.com/your-username/robomentor_app"
Repository = "https://github.com/your-username/robomentor_app"
Issues = "https://github.com/your-username/robomentor_app/issues"
Documentation = "https://robomentor.dev/docs"

[tool.setuptools.packages.find]
where = ["backend"]
include = ["*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]